terraform/configs/ingressroutes/gitlab-webservice-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-webservice-https-ingressroute
  namespace: gitlab
spec:
  entrypoint:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gitlab.example.com`) && PathPrefix(`/admin/sidekiq`)
      services:
        - kind: Service
          name: gitlab-webservice-default
          port: 8080
    - kind: Rule
      match: Host(`gitlab.example.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: gitlab-webservice-default
          port: 8181
  tls:
    secretName: tls-cert
    option:
      - namespace: gitlab
    domain:
      - main: example.com
